adjusts spacing to avoid overlap during animation

--- a/src/components/main_display/StoryCard.css
+++ b/src/components/main_display/StoryCard.css
@@ -5,6 +5,7 @@
     min-height: 310px;
     perspective: 900px;
     perspective-origin: 50% 50%;
+    margin: auto 5vw;
 }
 
 .vertical-tape-case {
